--- a/src/pages/Home.module.css
+++ b/src/pages/Home.module.css
@@ -1,11 +1,11 @@
-.App {
+.container {
   display: flex;
   flex-direction: column;
   align-items: center;
   gap: 30px;
 }
 
-.feed-container {
+.feedContainer {
   display: flex;
   flex-direction: column;
   max-width: 800px;
