--- a/src/index.css
+++ b/src/index.css
@@ -5,4 +5,7 @@
 body {
   margin: 0;
   background-color: #eee;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
+    sans-serif;
 }
