--- a/src/components/Navbar.module.css
+++ b/src/components/Navbar.module.css
@@ -23,4 +23,19 @@
 
 .active {
   color: blue;
+  font-weight: bold;
+  text-decoration: none;
+}
+
+.login {
+  background-color: #eee;
+  padding: 8px 10px;
+  box-sizing: border-box;
+  border: none;
+  border-radius: 6px;
+}
+
+.login:hover {
+  background-color: lightgray;
+  cursor: pointer;
 }
